<resources>
    <string name="app_name">Image Crop</string>

    <string name="file_info">File Info</string>
    <string name="file_name">Filename</string>
    <string name="file_resolution">Resolution</string>
    <string name="file_date">Date</string>
    <string name="file_time">Time</string>
    <string name="file_flash">Flash</string>
    <string name="file_exposure">Exposure</string>
    <string name="file_aperture">Aperture</string>
</resources>